--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -3,27 +3,17 @@
 }
 
 .title {
-    color: #000;
-    font-size: 3rem;
+    color: white;
+    font-size: 2.5rem;
+    font-family: 'Bangers', cursive;
     text-decoration: none;
 }
 
-.nav-list{
-    display: flex;
-    list-style-type: none;
-    margin: 0;
-}
-
-.nav-item {
-    color: #999;
-    font-size: 0.9rem;
-    margin-right: 1.3rem;
-    text-decoration: none;
+a {
+    font-size: 1.2rem;
+    letter-spacing: 0.15rem;
     &:hover{
-        color: #666;
+        text-decoration: none;
+        color: white;
     }
-}
-
-.active-nav-item{
-    color: #333;
 }
