--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -1,7 +1,7 @@
 .container {
     margin: 0 auto;
-    max-width: 750px;
-    padding: 1rem;
+    background: white;
+    max-width: 1280px;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
