--- a/src/templates/post.module.scss
+++ b/src/templates/post.module.scss
@@ -46,6 +46,12 @@ article>p{
     }
 }
 
+blockquote {
+    background: #212529;
+    border-radius: 10px;
+    padding: 0.8rem;
+}
+
 @media screen and (max-width: 768px){
     .fluid-img{
         max-width: 300px;
