--- a/styles/components/Blog/BlogCard.module.scss
+++ b/styles/components/Blog/BlogCard.module.scss
@@ -6,10 +6,14 @@
     transition: all 0.2s ease-in-out;
     box-shadow: 2px 2px 4px 1px var(--red-shadow);
     h3 { 
-        margin: 0;
+        margin: 0.5rem 0;
     }
-    p { 
-        margin: 0.25rem 0;
+    summary {
+        font-size: 0.9rem;
+    }
+    small {
+        font-size: 0.7rem;
+        opacity: 0.7;
     }
     &:hover {
         background-color: var(--red-hover);
