--- a/styles/components/NavMenu.module.scss
+++ b/styles/components/NavMenu.module.scss
@@ -14,6 +14,7 @@
     box-shadow: 0px 1px 5px 0px black;
     background-color: #343c44;
 	z-index: 99;
+	margin-bottom: 3rem;
 }
 .navMenu {
 	display: flex;
