--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,14 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;500;700&display=swap');
+
 :root {
   --dark-gray: hsl(210, 13%, 24%);
   --red: hsl(10, 91%, 62%);
   --red-hover: hsl(15, 100%, 98%);
   --red-shadow: hsl(0, 13%, 72%, 30%);
+  --light: 200;
+  --normal: 500;
+  --bold: 700;
 }
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+  font-family: "Poppins", -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 a {
