--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,29 +1,12 @@
-.header {
-    h1 {
-        font-size: 2rem;
-        margin-bottom: 1rem;
-        color: var(--dark-gray);
-    }
-}
 .projects {
     display: flex;
-}
-.viewMore {
-    text-align: center;
-    display: block;
-    padding: 0.5rem;
-    max-width: 100px;
-    font-size: 0.8rem;
-    box-shadow: 2px 2px 4px 1px var(--red-shadow);
-    color: var(--red);
-    transition: all 0.2s ease-in-out;
-    &:hover {
-        background-color: var(--red-hover);
-    }
 }
 .githubRepos {
     display: grid;
     row-gap: 2rem;
     justify-items: center;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+}
+.articles {
+    margin-bottom: 2rem;
 }
