--- a/styles/About.module.scss
+++ b/styles/About.module.scss
@@ -1,5 +1,20 @@
+@mixin inline__link {
+    color: var(--dark-gray);
+    text-decoration: underline;
+    transition: all 0.2s ease-in-out;
+    &:hover {
+        background-color: var(--red);
+        text-decoration: none;
+        color: white;
+        cursor: pointer;
+        padding: 0.2rem;
+        border-radius: 5px;
+        box-shadow: 2px 3px 5px 1px rgba(0,0,0,0.2);
+    }
+}
 .container {
     display: flex;
+    margin: 3rem 0;
     flex-direction: column;
     justify-content: space-evenly;
 }
@@ -17,10 +32,11 @@
         width: fit-content;
         flex: 2;
         p {
-            font-style: italic;
             text-align: justify;
-            font-weight: 500;
+            font-weight: 400;
+            font-size: 0.9rem;
             color: var(--dark-gray);
+            a {@include inline__link;}
         }
     }
 }
@@ -41,4 +57,34 @@
     font-size: 0.9rem;
     text-align: justify;
     opacity: 0.8;
+}
+.milestone {
+    h4 {
+        color: var(--dark-gray);
+        margin-bottom: 0.5rem;
+        font-size: 0.9rem;
+        font-weight: 500;
+    }
+    ul {
+        margin: 0;
+        padding-left: 1.5rem;
+        list-style: none;
+        li {
+            span {
+                margin-left: 1rem;
+                font-size: 0.9rem;
+                font-weight: 300;
+            }
+        }
+    }
+}
+.header3 {
+    font-weight: 500;
+}
+.icon {
+    width: 80px;
+    min-height: 80px;
+    margin: 0;
+    display: flex;
+    align-items: center;
 }
