--- a/styles/components/Common/Card.module.scss
+++ b/styles/components/Common/Card.module.scss
@@ -14,6 +14,7 @@
     }
     small {
         font-size: 0.7rem;
+        color: var(--light-gray);
     }
 }
 .cardBody {
@@ -22,6 +23,7 @@
     width: -webkit-fill-available;
     summary {
         margin-top: 0.5rem;
+        font-weight: 300;
     }
 }
 .cardTitle {
@@ -32,6 +34,7 @@
         h3 {
             margin: 0;
             margin-right: 0.5rem;
+            font-weight: 500;
         }
         display: flex;
         align-items: center;
