--- a/styles/components/Footer.module.scss
+++ b/styles/components/Footer.module.scss
@@ -20,12 +20,12 @@
     }
 }
 .contact {
-    padding: 2rem 2rem 1rem;
+    padding: 1rem 2rem;
     font-size: 0.9rem;
     font-weight: 300;
+    line-height: 1.6;
     font-style: italic;
     text-align: center;
-    text-shadow: 8px 6px 15px hsla(10, 100%, 63%, 61%);
     width: 80%;
     min-width: 350px;
     margin: 1rem auto;
@@ -39,13 +39,18 @@
 }
 .copylink {
     color: var(--dark-gray);
+    text-decoration: underline;
     transition: all 0.2s ease-in-out;
     &:hover {
         background-color: var(--red);
+        text-decoration: none;
         color: white;
         cursor: pointer;
         padding: 0.2rem;
         border-radius: 5px;
         box-shadow: 2px 3px 5px 1px rgba(0,0,0,0.2);
     }
+}
+.footerContainer {
+    padding: 0 1.5rem;
 }
