--- a/styles/components/Footer.module.scss
+++ b/styles/components/Footer.module.scss
@@ -2,9 +2,11 @@
 	display: flex;
 	justify-content: space-evenly;
     align-items: baseline;
-    box-shadow: 0px 1px 5px 1px black;
+    box-shadow: 0px 4px 20px 9px hsla(0, 0%, 42%, 0.478);
+	border-top-left-radius: 30px;
+	border-top-right-radius: 30px;
 	background: var(--dark-gray);
-	margin-top: 2rem;
+    margin: 0 1.25rem;
 }
 .socialIcon {
     margin: 0.6rem;
@@ -18,6 +20,10 @@
         border-top: 3px solid var(--red);
         border-right: 1px solid var(--red);
     }
+}
+.active {
+    border-top: 3px solid var(--red);
+        border-right: 1px solid var(--red);
 }
 .contact {
     padding: 1rem 2rem;
@@ -51,6 +57,8 @@
         box-shadow: 2px 3px 5px 1px rgba(0,0,0,0.2);
     }
 }
-.footerContainer {
-    padding: 0 1.5rem;
+@media screen and (max-width: 625px) {
+    .footer {
+        margin: 0;
+    }
 }
