--- a/styles/components/NavMenu.module.scss
+++ b/styles/components/NavMenu.module.scss
@@ -1,38 +1,29 @@
-@mixin navMenuChildren {
-    font-size: small;
-    padding: 0 1rem;
-    color: var(--gray);
-    font-weight: var(--bold-font);
-}
 .nav {
 	height: 80px;
 	display: flex;
-	padding: 0.5rem 1rem 0.5rem 0;
+	padding: 0.5rem 1rem;
 	justify-content: space-between;
     position: sticky;
     top: 0;
-    box-shadow: 0px 1px 5px 0px black;
+    box-shadow: 0px 4px 20px 9px hsla(0, 0%, 42%, 0.478);
+	border-bottom-left-radius: 30px;
+	border-bottom-right-radius: 30px;
 	background: var(--dark-gray);
 	z-index: 99;
 }
 .navMenu {
 	display: flex;
 	align-items: center;
-	margin-right: -24px;
-	* {
-		@include navMenuChildren;
-		&:hover {
-			color: var(--black);
-		}
-	}
-}
-.navAuth {
-	* {
-		@include navMenuChildren;
-	}
+	justify-content: space-around;
+	width: 300px;
 	a {
+		color: white;
+		padding: 0.5rem;
+		transition: background-color 0.2s ease-in-out;
 		&:hover {
-			color: var(--black);
+			border-top: 3px solid var(--red);
+        	border-right: 1px solid var(--red);
+			padding: 0.5rem;
 		}
 	}
 }
@@ -43,10 +34,12 @@
 }
 @media screen and (max-width: 625px) {
 	.nav {
+		justify-content: space-evenly;
+		align-items: center;
 		margin-left: -1.5rem;
 		margin-right: -1.5rem;
-	}
-	.navMenu {
-		display: none;
+		padding: 0;
+		flex-direction: column;
+		height: 100px;
 	}
 }
