--- a/styles/components/Footer.module.scss
+++ b/styles/components/Footer.module.scss
@@ -36,26 +36,26 @@
     min-width: 350px;
     margin: 1rem auto;
     color: var(--light-gray);
+    span {
+        color: var(--dark-gray);
+        text-decoration: underline;
+        transition: all 0.2s ease-in-out;
+        &:hover {
+            background-color: var(--red);
+            text-decoration: none;
+            color: white;
+            cursor: pointer;
+            padding: 0.2rem;
+            border-radius: 5px;
+            box-shadow: 2px 3px 5px 1px rgba(0,0,0,0.2);
+        }
+    }
 }
 .quotes {
     font-style: normal;
     font-size: 2rem;
     font-family: sans-serif;
     vertical-align: middle;
-}
-.copylink {
-    color: var(--dark-gray);
-    text-decoration: underline;
-    transition: all 0.2s ease-in-out;
-    &:hover {
-        background-color: var(--red);
-        text-decoration: none;
-        color: white;
-        cursor: pointer;
-        padding: 0.2rem;
-        border-radius: 5px;
-        box-shadow: 2px 3px 5px 1px rgba(0,0,0,0.2);
-    }
 }
 @media screen and (max-width: 625px) {
     .footer {
